# review-response-system

./: .env.example  .gitignore  LICENSE  README.md  agent_config.yaml.example  main.py  pyproject.toml  run_all.py  run_single.py  test_band.py
agents/: __init__.py  drafting.py  escalation.py  monitor.py  qa.py  qa_checks.py  qa_scorer.py  research.py  research_memory.py  triage.py
dashboard/: bridge.py
dashboard/frontend/: package-lock.json  tailwind.config.js
dashboard/frontend/src/: App.jsx  Drawer.jsx  index.css
ingestion/: receiver.py
migrations/: 001_initial.sql
shared/: __init__.py  base_agent.py  config.py  dashboard.py  envelope.py  mock_data.py  schemas.py
